# flitterly

./: LICENSE  README.md
.github/workflows/: Updater.yml  main.yml
flittery-lang/: Layout  READ  ZZX.ZZX  engine.py  flittery-pyproject.toml  maintenance.py  pyproject.toml  security.py  uvan.py
