[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uvan-fortress"
version = "8.0.0"
description = "A polyglot shell environment with high-resource memory locking."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "js2py",
    "PyYAML",
    "psutil",
]

[project.scripts]
uvan = "uvan:main"
